force-app/main/default/objects/Application_Setting__c/Application_Setting__c.object-meta.xml
<CustomObject>
    <description>This object stores the App setup information.</description>
    <label>Application Setting</label>
    <nameField>
        <label>Application Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>