force-app/main/default/objects/Application_Setting__c/fields/Enable_Manger_Goal_Update__c.field-meta.xml
<CustomField>
    <fullName>Enable_Manger_Goal_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Manger Goal Update</label>
    <type>Checkbox</type>
</CustomField>