force-app/main/default/objects/Application_Setting__c/fields/Header_Image__c.field-meta.xml
<CustomField>
    <fullName>Header_Image__c</fullName>
    <description>Stores the URL for the image to be included in the email template</description>
    <label>Header Image</label>
    <type>Url</type>
</CustomField>