force-app/main/default/objects/Application_Setting__c/fields/Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Date__c</fullName>
    <description>Stores the date when the app implementation started for a client</description>
    <label>Implementation Date</label>
    <type>Date</type>
</CustomField>