force-app/main/default/objects/Application_Setting__c/fields/Leads_used__c.field-meta.xml
<CustomField>
    <fullName>Leads_used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates if the organisation uses leads standard object for the sales process</description>
    <label>Leads used?</label>
    <type>Checkbox</type>
</CustomField>