force-app/main/default/objects/Application_Setting__c/fields/Meetings_used__c.field-meta.xml
<CustomField>
    <fullName>Meetings_used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meetings used?</label>
    <type>Checkbox</type>
</CustomField>