force-app/main/default/objects/Application_Setting__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stores the user Qualified probability value.</description>
    <label>Probability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>