force-app/main/default/objects/Application_Setting__c/fields/Qualified_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Percentage__c</fullName>
    <description>Stores the % of created opportunities that should be considered as qualified for historical metric calculation.</description>
    <label>Qualified Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>