force-app/main/default/objects/Application_Setting__c/fields/Stretch_percentage__c.field-meta.xml
<CustomField>
    <fullName>Stretch_percentage__c</fullName>
    <label>Stretch percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>